Fix register page height on small devices (< iPhone 6)

--- a/resources/assets/sass/login.scss
+++ b/resources/assets/sass/login.scss
@@ -8,4 +8,7 @@
   .preloader-wrapper {
     margin: auto;
   }
+  @media only screen and (max-width: 600px) {
+    .row.valign-wrapper { display: inherit; }
+  }
 }
